--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@emotion/core": "10.0.34",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
+    "graphql": "^15.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "prop-types": "^15.7.2"
   }
 }
