--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "graphql": "^15.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
