--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/user-event": "7.2.1",
     "graphql": "15.3.0",
     "react": "16.13.1",
+    "react-card-flip": "^1.0.11",
     "react-dom": "16.13.1",
     "react-icons": "3.10.0",
     "react-scripts": "3.4.3"
