--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "16.13.1",
     "react-card-flip": "^1.0.11",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.4.0",
     "react-icons": "3.10.0",
     "react-scripts": "3.4.3"
   },
