--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "theme-ui": "0.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.1",
     "prettier": "2.0.5",
     "prop-types": "15.7.2"
   }
