--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,7 +27,6 @@
   },
   "dependencies": {
     "@apollo/client": "3.1.3",
-    "@emotion/core": "10.0.35",
     "@reach/router": "1.3.4",
     "@testing-library/jest-dom": "5.11.3",
     "@testing-library/react": "10.4.8",
@@ -42,10 +43,20 @@
     "theme-ui": "0.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@storybook/addon-actions": "^6.0.16",
+    "@storybook/addon-essentials": "^6.0.16",
+    "@storybook/addon-links": "^6.0.16",
+    "@storybook/addon-storyshots": "^6.0.16",
+    "@storybook/node-logger": "^6.0.16",
+    "@storybook/preset-create-react-app": "^3.1.4",
+    "@storybook/react": "^6.0.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.1",
+    "babel-loader": "^8.1.0",
     "prettier": "2.0.5",
-    "prop-types": "15.7.2"
+    "prop-types": "15.7.2",
+    "react-is": "^16.13.1"
   }
 }
