--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.4",
+    "@storybook/addon-a11y": "^6.0.17",
     "@storybook/addon-actions": "6.0.17",
     "@storybook/addon-essentials": "6.0.17",
     "@storybook/addon-links": "6.0.17",
