--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
     "@testing-library/user-event": "12.1.3",
-    "add": "2.0.6",
     "deepmerge": "4.2.2",
     "graphql": "15.3.0",
     "react": "16.13.1",
@@ -42,8 +41,7 @@
     "react-icons": "3.11.0",
     "react-scripts": "3.4.3",
     "subscriptions-transport-ws": "0.9.18",
-    "theme-ui": "0.3.1",
-    "yarn": "1.22.4"
+    "theme-ui": "0.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.11.4",
