--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
@@ -57,6 +57,7 @@
     "@testing-library/react": "10.4.9",
     "@testing-library/user-event": "12.1.3",
     "babel-loader": "8.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "2.1.0",
     "prop-types": "15.7.2",
     "react-is": "16.13.1"
