--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cm": "git-cz",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
@@ -25,6 +26,11 @@
       "last 1 safari version"
     ]
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@apollo/client": "3.1.3",
     "@reach/router": "1.3.4",
@@ -45,6 +51,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.11.4",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@storybook/addon-a11y": "6.0.19",
     "@storybook/addon-actions": "6.0.19",
     "@storybook/addon-essentials": "6.0.19",
@@ -57,7 +65,11 @@
     "@testing-library/react": "10.4.9",
     "@testing-library/user-event": "12.1.3",
     "babel-loader": "8.1.0",
+    "commitizen": "^4.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^4.2.5",
     "jest-environment-jsdom-sixteen": "1.0.3",
+    "lint-staged": "^10.2.13",
     "prettier": "2.1.1",
     "prop-types": "15.7.2",
     "react-is": "16.13.1"
