--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
+    "lint": "eslint .",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
@@ -64,9 +65,16 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "10.4.9",
     "@testing-library/user-event": "12.1.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "8.1.0",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "3.3.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "husky": "4.2.5",
     "jest-environment-jsdom-sixteen": "1.0.3",
     "lint-staged": "10.2.13",
