--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "16.13.1",
     "react-hook-form": "6.6.0",
     "react-icons": "3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "subscriptions-transport-ws": "0.9.18",
     "theme-ui": "0.3.1"
