--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babel-loader": "8.1.0",
     "commitizen": "4.2.1",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.7.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-import": "2.22.0",
