--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
   "dependencies": {
     "@apollo/client": "3.1.4",
     "@reach/router": "1.3.4",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.0.2",
-    "@testing-library/user-event": "12.1.3",
     "deepmerge": "4.2.2",
     "graphql": "15.3.0",
     "react": "16.13.1",
@@ -64,9 +61,9 @@
     "@storybook/node-logger": "6.0.21",
     "@storybook/preset-create-react-app": "3.1.4",
     "@storybook/react": "6.0.21",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "11.0.2",
-    "@testing-library/user-event": "12.1.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
+    "@testing-library/user-event": "^12.1.3",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "commitizen": "4.2.1",
