--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router": "6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.8",
     "subscriptions-transport-ws": "0.9.18",
     "theme-ui": "0.3.1"
   },
