--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   "dependencies": {
     "@apollo/client": "3.2.9",
     "@reach/router": "1.3.4",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "deepmerge": "4.2.2",
     "graphql": "15.4.0",
     "history": "5.0.0",
@@ -48,7 +52,8 @@
     "react-scripts": "3.4.4",
     "react-toastify": "6.1.0",
     "subscriptions-transport-ws": "0.9.18",
-    "theme-ui": "0.3.4"
+    "theme-ui": "0.3.4",
+    "typescript": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
@@ -65,6 +70,7 @@
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.2.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "commitizen": "4.2.2",
@@ -78,7 +84,7 @@
     "husky": "4.3.0",
     "jest-environment-jsdom-sixteen": "1.0.3",
     "lint-staged": "10.5.2",
-    "prettier": "2.2.0",
+    "prettier": "^2.2.0",
     "prop-types": "15.7.2",
     "react-is": "17.0.1"
   }
