--- a/package.json
+++ b/package.json
@@ -35,10 +35,6 @@
   "dependencies": {
     "@apollo/client": "3.3.6",
     "@reach/router": "1.3.4",
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.20",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
     "deepmerge": "4.2.2",
     "graphql": "15.4.0",
     "history": "5.0.0",
@@ -70,6 +66,11 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.3",
     "@testing-library/user-event": "12.6.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/theme-ui": "^0.3.7",
     "@typescript-eslint/parser": "4.13.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
