--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   "dependencies": {
     "@apollo/client": "3.3.7",
     "@reach/router": "1.3.4",
+    "apollo-upload-client": "^14.1.3",
     "deepmerge": "4.2.2",
     "graphql": "15.5.0",
+    "firebase": "8.2.4",
     "history": "5.0.0",
     "react": "17.0.1",
     "react-card-flip": "1.0.11",
